tests/src/snapshots/fe_compiler_tests__compile_errors__call_builtin_object.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: illegal call on builtin object
  ┌─ fixtures/compile_errors/call_builtin_object.fe:4:5
  │
4 │     block.foo()
  │     ^^^^^^^^^ illegal call


